Fix create payment gap button that was not disabled when in the form of a dropdown

--- a/app/themes/tekyla/stylesheets/bank_statements.scss
+++ b/app/themes/tekyla/stylesheets/bank_statements.scss
@@ -25,6 +25,10 @@
         @include margin-left($default-gap);
         text-align: center;
       }
+
+      .flatpickr-input {
+        width: 200px;
+      }
     }
   }
 
